assets/metadata/objects/Opinion_Respondent__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opinion Respondents</relationshipLabel>
        <relationshipName>Opinion_Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opinion_Completed_Location__c</fullName>
        <label>Opinion Completed Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Opinion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opinion</label>
        <referenceTo>Opinion__c</referenceTo>
        <relationshipLabel>Opinion Respondents</relationshipLabel>
        <relationshipName>Opinion_Respondents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respondent_FirstName__c</fullName>
        <label>Respondent_FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respondent_LastName__c</fullName>
        <label>Respondent_LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opinion Respondent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORR-{0000}</displayFormat>
        <label>Opinion Respondent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opinion Respondents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>